# snip-lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: context-pack.md
installer/: SnipLite.iss
src/: main.cpp  resource.h  snip_lite.rc
